antlr-generated/antlrGen/expression/expressionParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g 2017-03-28 11:47:33

  package antlrGen.expression;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class expressionParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "NEGATION", "DEFINED", "ARTVARCHAR", "DEBUGMODECOMMAND", "STRING", "EPRESSIONCHAR", "REFERENCECHAR", "IDENT", "INTEGER", "ISLAST", "ISFIRST", "SIZE", "ISNUMERIC", "ULCAP", "LLCAP", "DEBUGMODE", "CURRENTFILE", "OUTFILE", "DEFAULTOUTPUT", "OUTDIR", "COMMANDCHAR", "COMMENTCHAR", "NOTNEWLINE", "WS", "NL", "COMMENT", "DIGIT", "SPECCHAR", "LETTER", "ANYCHAR", "'&&'", "'||'", "'('", "')'", "'true'", "'false'", "'=='", "'!='", "'<'", "'<='", "'>='", "'>'", "'+'", "'-'", "'*'", "'/'", "'defined'", "'$'"
    };
    public static final int COMMANDCHAR=24;
    public static final int LETTER=32;
    public static final int SPECCHAR=31;
    public static final int EOF=-1;
    public static final int T__51=51;
    public static final int ARTVARCHAR=6;
    public static final int ANYCHAR=33;
    public static final int IDENT=11;
    public static final int LLCAP=18;
    public static final int OUTFILE=21;
    public static final int DIGIT=30;
    public static final int NL=28;
    public static final int COMMENT=29;
    public static final int T__50=50;
    public static final int T__42=42;
    public static final int INTEGER=12;
    public static final int T__43=43;
    public static final int REFERENCECHAR=10;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int EPRESSIONCHAR=9;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int ISNUMERIC=16;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int DEFINED=5;
    public static final int ULCAP=17;
    public static final int DEBUGMODE=19;
    public static final int ISFIRST=14;
    public static final int COMMENTCHAR=25;
    public static final int WS=27;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int NEGATION=4;
    public static final int DEBUGMODECOMMAND=7;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int DEFAULTOUTPUT=22;
    public static final int CURRENTFILE=20;
    public static final int OUTDIR=23;
    public static final int NOTNEWLINE=26;
    public static final int ISLAST=13;
    public static final int SIZE=15;
    public static final int STRING=8;

    // delegates
    // delegators


        public expressionParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public expressionParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return expressionParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g"; }


    public static class evaluator_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "evaluator"
    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:25:1: evaluator : ( stringExpression | freeExpression | STRING )* ;
    public final expressionParser.evaluator_return evaluator() throws RecognitionException {
        expressionParser.evaluator_return retval = new expressionParser.evaluator_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token STRING3=null;
        expressionParser.stringExpression_return stringExpression1 = null;

        expressionParser.freeExpression_return freeExpression2 = null;


        CommonTree STRING3_tree=null;

        try {
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:26:3: ( ( stringExpression | freeExpression | STRING )* )
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:27:3: ( stringExpression | freeExpression | STRING )*
            {
            root_0 = (CommonTree)adaptor.nil();

            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:27:3: ( stringExpression | freeExpression | STRING )*
            loop1:
            do {
                int alt1=4;
                switch ( input.LA(1) ) {
                case STRING:
                    {
                    int LA1_2 = input.LA(2);

                    if ( (synpred1_expression()) ) {
                        alt1=1;
                    }
                    else if ( (synpred3_expression()) ) {
                        alt1=3;
                    }


                    }
                    break;
                case EPRESSIONCHAR:
                    {
                    alt1=1;
                    }
                    break;
                case IDENT:
                case INTEGER:
                case 36:
                case 38:
                case 39:
                case 46:
                case 47:
                case 50:
                case 51:
                    {
                    alt1=2;
                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:27:4: stringExpression
            	    {
            	    pushFollow(FOLLOW_stringExpression_in_evaluator98);
            	    stringExpression1=stringExpression();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, stringExpression1.getTree());

            	    }
            	    break;
            	case 2 :
            	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:28:5: freeExpression
            	    {
            	    pushFollow(FOLLOW_freeExpression_in_evaluator105);
            	    freeExpression2=freeExpression();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, freeExpression2.getTree());

            	    }
            	    break;
            	case 3 :
            	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:29:5: STRING
            	    {
            	    STRING3=(Token)match(input,STRING,FOLLOW_STRING_in_evaluator111); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    STRING3_tree = (CommonTree)adaptor.create(STRING3);
            	    adaptor.addChild(root_0, STRING3_tree);
            	    }

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "evaluator"

    public static class expression_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expression"
    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:34:1: expression : ( freeExpression | stringExpression );
    public final expressionParser.expression_return expression() throws RecognitionException {
        expressionParser.expression_return retval = new expressionParser.expression_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        expressionParser.freeExpression_return freeExpression4 = null;

        expressionParser.stringExpression_return stringExpression5 = null;



        try {
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:35:3: ( freeExpression | stringExpression )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( ((LA2_0>=IDENT && LA2_0<=INTEGER)||LA2_0==36||(LA2_0>=38 && LA2_0<=39)||(LA2_0>=46 && LA2_0<=47)||(LA2_0>=50 && LA2_0<=51)) ) {
                alt2=1;
            }
            else if ( ((LA2_0>=STRING && LA2_0<=EPRESSIONCHAR)) ) {
                alt2=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:35:5: freeExpression
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_freeExpression_in_expression135);
                    freeExpression4=freeExpression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, freeExpression4.getTree());

                    }
                    break;
                case 2 :
                    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:36:5: stringExpression
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_stringExpression_in_expression141);
                    stringExpression5=stringExpression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, stringExpression5.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "expression"

    public static class stringExpression_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "stringExpression"
    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:39:1: stringExpression : ( ( STRING )* ( nameExpression )+ ( STRING )* )+ ;
    public final expressionParser.stringExpression_return stringExpression() throws RecognitionException {
        expressionParser.stringExpression_return retval = new expressionParser.stringExpression_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token STRING6=null;
        Token STRING8=null;
        expressionParser.nameExpression_return nameExpression7 = null;


        CommonTree STRING6_tree=null;
        CommonTree STRING8_tree=null;

        try {
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:40:3: ( ( ( STRING )* ( nameExpression )+ ( STRING )* )+ )
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:40:5: ( ( STRING )* ( nameExpression )+ ( STRING )* )+
            {
            root_0 = (CommonTree)adaptor.nil();

            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:40:5: ( ( STRING )* ( nameExpression )+ ( STRING )* )+
            int cnt6=0;
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==STRING) ) {
                    int LA6_2 = input.LA(2);

                    if ( (synpred8_expression()) ) {
                        alt6=1;
                    }


                }
                else if ( (LA6_0==EPRESSIONCHAR) ) {
                    int LA6_3 = input.LA(2);

                    if ( (synpred8_expression()) ) {
                        alt6=1;
                    }


                }


                switch (alt6) {
            	case 1 :
            	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:40:6: ( STRING )* ( nameExpression )+ ( STRING )*
            	    {
            	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:40:6: ( STRING )*
            	    loop3:
            	    do {
            	        int alt3=2;
            	        int LA3_0 = input.LA(1);

            	        if ( (LA3_0==STRING) ) {
            	            alt3=1;
            	        }


            	        switch (alt3) {
            	    	case 1 :
            	    	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:0:0: STRING
            	    	    {
            	    	    STRING6=(Token)match(input,STRING,FOLLOW_STRING_in_stringExpression157); if (state.failed) return retval;
            	    	    if ( state.backtracking==0 ) {
            	    	    STRING6_tree = (CommonTree)adaptor.create(STRING6);
            	    	    adaptor.addChild(root_0, STRING6_tree);
            	    	    }

            	    	    }
            	    	    break;

            	    	default :
            	    	    break loop3;
            	        }
            	    } while (true);

            	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:40:14: ( nameExpression )+
            	    int cnt4=0;
            	    loop4:
            	    do {
            	        int alt4=2;
            	        int LA4_0 = input.LA(1);

            	        if ( (LA4_0==EPRESSIONCHAR) ) {
            	            int LA4_2 = input.LA(2);

            	            if ( (synpred6_expression()) ) {
            	                alt4=1;
            	            }


            	        }


            	        switch (alt4) {
            	    	case 1 :
            	    	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:0:0: nameExpression
            	    	    {
            	    	    pushFollow(FOLLOW_nameExpression_in_stringExpression160);
            	    	    nameExpression7=nameExpression();

            	    	    state._fsp--;
            	    	    if (state.failed) return retval;
            	    	    if ( state.backtracking==0 ) adaptor.addChild(root_0, nameExpression7.getTree());

            	    	    }
            	    	    break;

            	    	default :
            	    	    if ( cnt4 >= 1 ) break loop4;
            	    	    if (state.backtracking>0) {state.failed=true; return retval;}
            	                EarlyExitException eee =
            	                    new EarlyExitException(4, input);
            	                throw eee;
            	        }
            	        cnt4++;
            	    } while (true);

            	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:40:30: ( STRING )*
            	    loop5:
            	    do {
            	        int alt5=2;
            	        int LA5_0 = input.LA(1);

            	        if ( (LA5_0==STRING) ) {
            	            int LA5_2 = input.LA(2);

            	            if ( (synpred7_expression()) ) {
            	                alt5=1;
            	            }


            	        }


            	        switch (alt5) {
            	    	case 1 :
            	    	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:0:0: STRING
            	    	    {
            	    	    STRING8=(Token)match(input,STRING,FOLLOW_STRING_in_stringExpression163); if (state.failed) return retval;
            	    	    if ( state.backtracking==0 ) {
            	    	    STRING8_tree = (CommonTree)adaptor.create(STRING8);
            	    	    adaptor.addChild(root_0, STRING8_tree);
            	    	    }

            	    	    }
            	    	    break;

            	    	default :
            	    	    break loop5;
            	        }
            	    } while (true);


            	    }
            	    break;

            	default :
            	    if ( cnt6 >= 1 ) break loop6;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(6, input);
                        throw eee;
                }
                cnt6++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "stringExpression"

    public static class nameExpression_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "nameExpression"
    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:43:1: nameExpression : ( EPRESSIONCHAR simpleExpr EPRESSIONCHAR | EPRESSIONCHAR freeExpression ( EPRESSIONCHAR )+ );
    public final expressionParser.nameExpression_return nameExpression() throws RecognitionException {
        expressionParser.nameExpression_return retval = new expressionParser.nameExpression_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token EPRESSIONCHAR9=null;
        Token EPRESSIONCHAR11=null;
        Token EPRESSIONCHAR12=null;
        Token EPRESSIONCHAR14=null;
        expressionParser.simpleExpr_return simpleExpr10 = null;

        expressionParser.freeExpression_return freeExpression13 = null;


        CommonTree EPRESSIONCHAR9_tree=null;
        CommonTree EPRESSIONCHAR11_tree=null;
        CommonTree EPRESSIONCHAR12_tree=null;
        CommonTree EPRESSIONCHAR14_tree=null;

        try {
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:44:3: ( EPRESSIONCHAR simpleExpr EPRESSIONCHAR | EPRESSIONCHAR freeExpression ( EPRESSIONCHAR )+ )
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==EPRESSIONCHAR) ) {
                int LA8_1 = input.LA(2);

                if ( (LA8_1==REFERENCECHAR) ) {
                    alt8=1;
                }
                else if ( ((LA8_1>=IDENT && LA8_1<=INTEGER)||LA8_1==36||(LA8_1>=38 && LA8_1<=39)||(LA8_1>=46 && LA8_1<=47)||(LA8_1>=50 && LA8_1<=51)) ) {
                    alt8=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 8, 1, input);

                    throw nvae;
                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;
            }
            switch (alt8) {
                case 1 :
                    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:44:5: EPRESSIONCHAR simpleExpr EPRESSIONCHAR
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    EPRESSIONCHAR9=(Token)match(input,EPRESSIONCHAR,FOLLOW_EPRESSIONCHAR_in_nameExpression181); if (state.failed) return retval;
                    pushFollow(FOLLOW_simpleExpr_in_nameExpression184);
                    simpleExpr10=simpleExpr();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) root_0 = (CommonTree)adaptor.becomeRoot(simpleExpr10.getTree(), root_0);
                    EPRESSIONCHAR11=(Token)match(input,EPRESSIONCHAR,FOLLOW_EPRESSIONCHAR_in_nameExpression187); if (state.failed) return retval;

                    }
                    break;
                case 2 :
                    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:45:5: EPRESSIONCHAR freeExpression ( EPRESSIONCHAR )+
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    EPRESSIONCHAR12=(Token)match(input,EPRESSIONCHAR,FOLLOW_EPRESSIONCHAR_in_nameExpression194); if (state.failed) return retval;
                    pushFollow(FOLLOW_freeExpression_in_nameExpression197);
                    freeExpression13=freeExpression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, freeExpression13.getTree());
                    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:45:48: ( EPRESSIONCHAR )+
                    int cnt7=0;
                    loop7:
                    do {
                        int alt7=2;
                        alt7 = dfa7.predict(input);
                        switch (alt7) {
                    	case 1 :
                    	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:0:0: EPRESSIONCHAR
                    	    {
                    	    EPRESSIONCHAR14=(Token)match(input,EPRESSIONCHAR,FOLLOW_EPRESSIONCHAR_in_nameExpression199); if (state.failed) return retval;

                    	    }
                    	    break;

                    	default :
                    	    if ( cnt7 >= 1 ) break loop7;
                    	    if (state.backtracking>0) {state.failed=true; return retval;}
                                EarlyExitException eee =
                                    new EarlyExitException(7, input);
                                throw eee;
                        }
                        cnt7++;
                    } while (true);


                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "nameExpression"

    public static class simpleExpr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "simpleExpr"
    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:49:1: simpleExpr : REFERENCECHAR ( nameExprTerm )* ;
    public final expressionParser.simpleExpr_return simpleExpr() throws RecognitionException {
        expressionParser.simpleExpr_return retval = new expressionParser.simpleExpr_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token REFERENCECHAR15=null;
        expressionParser.nameExprTerm_return nameExprTerm16 = null;


        CommonTree REFERENCECHAR15_tree=null;

        try {
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:50:3: ( REFERENCECHAR ( nameExprTerm )* )
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:50:5: REFERENCECHAR ( nameExprTerm )*
            {
            root_0 = (CommonTree)adaptor.nil();

            REFERENCECHAR15=(Token)match(input,REFERENCECHAR,FOLLOW_REFERENCECHAR_in_simpleExpr219); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            REFERENCECHAR15_tree = (CommonTree)adaptor.create(REFERENCECHAR15);
            root_0 = (CommonTree)adaptor.becomeRoot(REFERENCECHAR15_tree, root_0);
            }
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:50:20: ( nameExprTerm )*
            loop9:
            do {
                int alt9=2;
                int LA9_0 = input.LA(1);

                if ( (LA9_0==IDENT) ) {
                    int LA9_2 = input.LA(2);

                    if ( (synpred11_expression()) ) {
                        alt9=1;
                    }


                }
                else if ( (LA9_0==REFERENCECHAR) ) {
                    int LA9_3 = input.LA(2);

                    if ( (synpred11_expression()) ) {
                        alt9=1;
                    }


                }


                switch (alt9) {
            	case 1 :
            	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:0:0: nameExprTerm
            	    {
            	    pushFollow(FOLLOW_nameExprTerm_in_simpleExpr222);
            	    nameExprTerm16=nameExprTerm();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, nameExprTerm16.getTree());

            	    }
            	    break;

            	default :
            	    break loop9;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "simpleExpr"

    public static class nameExprTerm_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "nameExprTerm"
    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:53:1: nameExprTerm : ( IDENT | REFERENCECHAR simpleExpr | simpleExpr ) ;
    public final expressionParser.nameExprTerm_return nameExprTerm() throws RecognitionException {
        expressionParser.nameExprTerm_return retval = new expressionParser.nameExprTerm_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token IDENT17=null;
        Token REFERENCECHAR18=null;
        expressionParser.simpleExpr_return simpleExpr19 = null;

        expressionParser.simpleExpr_return simpleExpr20 = null;


        CommonTree IDENT17_tree=null;
        CommonTree REFERENCECHAR18_tree=null;

        try {
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:54:3: ( ( IDENT | REFERENCECHAR simpleExpr | simpleExpr ) )
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:54:5: ( IDENT | REFERENCECHAR simpleExpr | simpleExpr )
            {
            root_0 = (CommonTree)adaptor.nil();

            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\expression.g:54:5: ( IDENT | REFERENCECHAR simpleExpr | simpleExpr )
            int alt10=3;
            int LA10_0 = input.LA(1);

            if ( (LA10_0==IDENT) ) {
                alt10=1;
            }
            else if ( (LA10_0==REFERENCECHAR) ) {
                int LA10_2 = input.LA(2);

                if ( (LA10_2==REFERENCECHAR) ) {
                    int LA10_3 = input.LA(3);
